--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy
-pandas
-scikit-learn
-nltk
-matplotlib
-seaborn
-streamlit
+numpy>=1.20.0
+pandas>=1.3.0
+scikit-learn>=1.0.0
+nltk>=3.6.0
+matplotlib>=3.4.0
+seaborn>=0.11.0
+streamlit>=1.10.0
